# Real-Time-MIDI-Notation

./: ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INDEX.md  INSTALLATION.md  LICENSE  MIDI_NAMING_CONVENTIONS.md  MODULE_MAP.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  device_manager.py  event_bus.py  main.py  preview.py  pyproject.toml  rhythm_analyzer.py  run.py  setup.py  slúžiť ako „návod + architektúra + dokumentácia“  test_chords.py  test_no_midi.py  ui_manager.py
.github/: feature_request.md  midi_device_compatibility.md  performance_issue.md  pull_request_template.md  ui_rendering_issue.md
ai/: ai_core.py
core/: app_controller.py  config_manager.py  event_bus.py  event_types.py  logger.py  notation_processor.py  playback_engine.py  track_manager.py
midi_input/: __init__.py  event_router.py  message_parser.py  midi_listener.py
notation_engine/: __init__.py  chord_detector.py  drum_notation.py  harmony_engine.py  key_detector.py  layout_engine.py  midi_note_mapper.py  notation_processor.py  notation_renderer.py  note_mapper.py  rhythm_analyzer.py  scale_detector.py  symbol_manager.py
real_time_processing/: __init__.py  error_handler.py  latency_monitor.py  performance_tracker.py  playback_engine.py  stream_handler.py
renderer/: graphic_renderer.py  notation_renderer.py
renderer_legacy/: .gitkeep  exporter.py
renderer_new/: graphic_renderer.py  layers.py  notation_renderer.py  playhead.py  selection_actions.py  selection_layer.py  timeline_controller.py  timeline_grid.py  (+3 more)
(+40 files in other folders)
