[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-midi-notation"
version = "0.9.0"
description = "High-performance real-time 16-track MIDI notation engine for Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Richard Pizem", email = "" }
]

keywords = [
    "midi",
    "real-time",
    "music-notation",
    "visualization",
    "python",
    "pygame",
    "yamaha",
    "multi-track",
    "real-time-midi",
    "music-technology",
    "digital-audio"
]

dependencies = [
    "pygame",
    "mido",
    "python-rtmidi"
]

[project.urls]
Homepage = "https://github.com/richardpizem-ctrl/Real-Time-MIDI-Notation"
Repository = "https://github.com/richardpizem-ctrl/Real-Time-MIDI-Notation"
